# Code-Scanner

./: .coverage  .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  PRD.md  README.md  config.example.toml  config.toml  pyproject.toml  removal_list.txt
docs/: ai-tools.md  autostart-linux.md  autostart-macos.md  autostart-windows.md  getting-started.md  linux-setup.md  macos-setup.md  windows-setup.md
examples/: android-config.toml  config.toml  cpp-config.toml  cpp-qt-config.toml  ios-macos-config.toml  java-config.toml  javascript-config.toml  python-config.toml
examples/docs/: linux-setup.md  macos-setup.md  windows-setup.md
scripts/: autostart-linux.sh  autostart-macos.sh  autostart-windows.bat
src/code_scanner/: __init__.py  __main__.py  ai_tools.py  base_client.py  cli.py  config.py  ctags_index.py  file_filter.py  git_watcher.py  issue_tracker.py  llm_client.py  lmstudio_client.py  models.py  ollama_client.py  output.py  scanner.py  text_utils.py  utils.py
tests/: conftest.py  test_ai_tools.py  test_ai_tools_ctags_coverage.py  test_ai_tools_extended_coverage.py  test_base_client.py  test_base_client_coverage.py  test_cli.py  test_cli_coverage.py  test_cli_extended.py  test_cli_extended_coverage.py  test_config.py  test_config_coverage.py  test_ctags_index.py  test_ctags_index_extended_coverage.py  test_file_filter.py  test_git_watcher.py  test_git_watcher_coverage.py  test_git_watcher_extended.py  test_git_watcher_extended_coverage.py  test_integration.py  test_issue_tracker.py  test_issue_tracker_extended.py  test_llm_client.py  test_llm_client_coverage.py  test_llm_client_extended.py  test_lmstudio_client.py  test_lmstudio_client_coverage.py  test_lmstudio_client_extended.py  test_main_entry.py  test_ollama_client.py  test_ollama_client_coverage.py  test_output.py  test_qt_integration.py  test_scanner.py  test_scanner_coverage.py  test_scanner_extended.py  test_scanner_no_restart.py  test_scanner_tools_integration.py  test_text_utils.py  test_utils.py
tests/sample_qt_project/: CMakeLists.txt
tests/sample_qt_project/src/: data_processor.cpp  data_processor.h  main.cpp  utils.cpp  utils.h  widget.cpp  widget.h
